updated images, improved API